tests/baselines/reference/tsxReactEmit2.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    var p1: any, p2: any, p3: any;
    var spreads1 = <div {...p1}>{p2}</div>;
    var spreads2 = <div {...p1}>{p2}</div>;
    var spreads3 = <div x={p3} {...p1}>{p2}</div>;
    var spreads4 = <div {...p1} x={p3} >{p2}</div>;
    var spreads5 = <div x={p2} {...p1} y={p3}>{p2}</div>;
    